--- a/.gitignore
+++ b/.gitignore
@@ -21,4 +21,6 @@ Package Control.ca-certs/
 *.cache
 *.suo
 *.pdf
-
+Package Control.merged-ca-bundle
+Package Control.user-ca-bundle
+oscrypto-ca-bundle.crt
